--- a/test1.html
+++ b/test1.html
@@ -127,7 +127,7 @@
             </div>
             <form class="form-inline ml-auto" style="position:relative; right:20%;">
                 <input type="text" class="form-control mr-sm-2" style=" width:550px" placeholder="Tìm kiếm...">
-                <button type="submit" class="btn btn-outline-light" style=" width:150px"><img src="C:\Users\ASUS\Desktop\Project\IMAGE\910-9100346_facebook-search-icon-blue-magnifying-glass-icon.png" alt="search"style="height:20px"></button>
+                <button type="submit" class="btn btn-outline-light" style=" width:150px"><img src="./Image/910-9100346_facebook-search-icon-blue-magnifying-glass-icon.png" alt="search"style="height:20px"></button>
             </form>
        
           <div class="btn-group">
