--- a/signin.html
+++ b/signin.html
@@ -29,7 +29,9 @@
 						<div class="image"><i class="fas fa-eye"></i></div>
 					</div> <input type="checkbox" class="form-check-input ml-0" id="exampleCheck1"> <label class="form-check-label ml-3" for="exampleCheck1">I agree to Stoke <u>Terms</u> and <u>Privacy Policy</u></label>
 				</form> 
-				<button type="button" class="btn btn-success mt-5">Get satrted now</button>
+				<a href = "test1.html">
+					<button type="button" class="btn btn-success mt-5">Get satrted now</button>
+				</a>
 				<p class="exist mt-4">Existing user? <span>Log in</span></p>
 			</div>
 		</div>
