--- a/test1.html
+++ b/test1.html
@@ -138,7 +138,9 @@
               <div class="dropdown-menu dropdown-menu-right">
                 <button class="dropdown-item" type="button">thông tin cá nhân</button>
                 <button class="dropdown-item" type="button">Hoạt động gần đây</button>
-                <button class="dropdown-item" type="button">cài đặt</button>
+                <a href = "setting.html">
+                    <button class="dropdown-item" type="button">cài đặt</button>
+                </a>
               </div>
             </div>
         
