--- a/setting.html
+++ b/setting.html
@@ -4,91 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> My account setting </title>
+    <title> Cài đặt tài khoản </title>
     <link rel="stylesheet" href="setting.css">
 </head>
-<body>
-    <div class="bs-example">
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary fixed-top">
-        <a href="#" class="navbar-brand">logo</a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse2">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarCollapse2">
-            <div class="navbar-nav">
-                <span style="font-size:30px;cursor:pointer;color:aliceblue;text-decoration:none; position:relative; left:60%;" onclick="openNavbar()">&#9776; </span>
-                
-                <script>
-                function openNavbar() {
-                document.getElementById("mySidenav").style.width = "180px";
-                }
-                
-                function closeNavbar() {
-                document.getElementById("mySidenav").style.width = "0";
-                }
-                </script></a></a>
-        <div class="nav-item dropdown active" style="left:750%;">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Khu vực</a>
-            <div class="dropdown-menu">
-                <a href="#" class="dropdown-item">Quận, huyện</a>
-                <a href="#" class="dropdown-item">Thành phố</a>
-                <a href="#" class="dropdown-item">Tỉnh thành</a>
-                <a href="#" class="dropdown-item">Quốc gia</a>
-            </div>
-        </div>
-        </div>
-        </div>
-        <form class="form-inline ml-auto" style="position:relative; right:20%;">
-        <input type="text" class="form-control mr-sm-2" style=" width:550px" placeholder="Tìm kiếm...">
-        <button type="submit" class="btn btn-outline-light" style=" width:150px"><img src="./Image/search.png" alt="search"style="height:20px"></button>
-        </form>
-
-        <div class="btn-group">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <img src="https://icon-library.com/images/avatar-icon-images/avatar-icon-images-4.jpg" 
-            style="width:50px; height:50px;">
-        </button>
-        <div class="dropdown-menu dropdown-menu-right">
-        <button class="dropdown-item" type="button">Thông tin cá nhân</button>
-        <button class="dropdown-item" type="button">Cài đặt</button>
-        </div>
-    </div>
-    </nav>
+<body> 
+    <div class="logo">
+        <img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
     </div>
     <div class="wrapper bg-white mt-sm-5">
-    <h4 class="pb-4 border-bottom">Account settings</h4>
+    <h4 class="pb-4 border-bottom">Cài đặt tài khoản</h4>
     <div class="d-flex align-items-start py-3 border-bottom"> <img src="./Image/Ảnh 1.jpg" class="img" alt="">
-        <div class="pl-sm-4 pl-2" id="img-section"> <b>Profile Photo</b>
-            <p>Accepted file type .png. Less than 1MB</p> <button class="btn button border"><b>Upload</b></button>
+        <div class="pl-sm-4 pl-2" id="img-section"> <b>Ảnh đại diện</b>
+            <p>File ảnh jpg hoặc png</p> <button class="btn button border"><b>Thay đổi</b></button>
         </div>
     </div>
     <div class="py-2">
         <div class="row py-2">
-            <div class="col-md-6"> <label for="firstname">First Name</label> <input type="text" class="bg-light form-control" placeholder="First Name"> </div>
-            <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Last Name</label> <input type="text" class="bg-light form-control" placeholder="Last Name"> </div>
+            <div class="col-md-6"> <label for="firstname">Họ</label> <input type="text" class="bg-light form-control" placeholder="Họ"> </div>
+            <div class="col-md-6 pt-md-0 pt-3"> <label for="lastname">Tên</label> <input type="text" class="bg-light form-control" placeholder="Tên"> </div>
         </div>
         <div class="row py-2">
-            <div class="col-md-6"> <label for="email">Email Address</label> <input type="text" class="bg-light form-control" placeholder="Your Email"> </div>
-            <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">Phone Number</label> <input type="tel" class="bg-light form-control" placeholder="Your Phone Number"> </div>
+            <div class="col-md-6"> <label for="email">Email</label> <input type="text" class="bg-light form-control" placeholder="Email"> </div>
+            <div class="col-md-6 pt-md-0 pt-3"> <label for="phone">SĐT</label> <input type="tel" class="bg-light form-control" placeholder="+84"> </div>
         </div>
         <div class="row py-2">
-            <div class="col-md-6"> <label for="country">Country</label> <select name="country" id="country" class="bg-light">
-                    <option value="india" selected>Viet Nam</option>
+            <div class="col-md-6"> <label for="country">Quốc gia</label> <select name="country" id="country" class="bg-light">
+                    <option value="india" selected>Việt Nam</option>
                 </select> </div>
-            <div class="col-md-6 pt-md-0 pt-3" id="lang"> <label for="language">Language</label>
+            <div class="col-md-6 pt-md-0 pt-3" id="lang"> <label for="language">Ngôn ngữ</label>
                 <div class="arrow"> <select name="language" id="language" class="bg-light">
-                    <option value="vietnamese" selected>Vietnamese</option>
-                        <option value="english" >English</option>
+                    <option value="vietnamese" selected>Tiếng Việt</option>
+                        <option value="english" >Tiếng Anh</option>
                     </select> </div>
             </div>
         </div>
-        <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Save Changes</button> <button class="btn border button">Cancel</button> </div>
+        <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Lưu thay đổi</button> <button class="btn border button">Hủy</button> </div>
         <div class="d-sm-flex align-items-center pt-3" id="deactivate">
-            <div> <b>Deactivate your account</b>
-                <p>Details about your company account and password</p>
+            <div> <b>Khóa tài khoản của bạn</b>
+                <p>Thông tin chi tiết về tài khoản và mật khẩu của bạn</p>
             </div>
-            <div class="ml-auto"> <button class="btn danger">Deactivate</button> </div>
+            <div class="ml-auto"> <button class="btn danger">Khóa tài khoản</button> </div>
         </div>
     </div>
     </div>
