--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login Page</title>
+	<title>Đăng nhập</title>
 	<link rel = "stylesheet" href="signin.css">
 </head>
 <body>
@@ -12,9 +12,10 @@
 		<div class="row my-5">
 			<div class="col-md-6 text-left text-white lcol">
 				<div class="greeting">
-					<h3>Welcome to <span class="txt">Double A</span></h3>
+					<img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
+					<h3>Welcome to <span class="txt">G-Life</span></h3>
+					<h6 class="mt-3">Let's make a good life</h6>
 				</div>
-				<h6 class="mt-3">Bình An like to eat "cơm chó"</h6>
 				<div class="footer">
 					<div class="socials d-flex flex-row justify-content-between text-white">
 					</div>
@@ -22,17 +23,17 @@
 			</div>
 			<div class="col-md-6 rcol">
 				<form class="sign-up">
-					<h2 class="heading mb-4">Sign up</h2>
-					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Name"> </div>
+					<h2 class="heading mb-4">Đăng nhập</h2>
+					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng nhập"> </div>
 					<div class="form-group fone mt-2"> <i class="fas fa-envelope"></i> <input type="email" class="form-control" placeholder="Email"> </div>
-					<div class="form-group fone mt-2"> <i class="fas fa-lock"></i> <input type="password" class="form-control" placeholder="Password">
+					<div class="form-group fone mt-2"> <i class="fas fa-lock"></i> <input type="password" class="form-control" placeholder="Mật khẩu">
 						<div class="image"><i class="fas fa-eye"></i></div>
-					</div> <input type="checkbox" class="form-check-input ml-0" id="exampleCheck1"> <label class="form-check-label ml-3" for="exampleCheck1">I agree to Stoke <u>Terms</u> and <u>Privacy Policy</u></label>
+					</div> <input type="checkbox" class="form-check-input ml-0" id="exampleCheck1"> <label class="form-check-label ml-3" for="exampleCheck1">Tôi đồng ý với <u>điều khoản </u> và <u>chính sách của web</u></label>
 				</form> 
 				<a href = "test1.html">
-					<button type="button" class="btn btn-success mt-5">Get satrted now</button>
+					<button type="button" class="btn btn-success mt-5">Đăng nhập</button>
 				</a>
-				<p class="exist mt-4">Existing user? <span>Log in</span></p>
+				<p class="exist mt-4">Chưa có tài khoản ? <span>Đăng kí</span></p>
 			</div>
 		</div>
 	</div>
