--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
 						<div class="image"><i class="fas fa-eye"></i></div>
 					</div> <input type="checkbox" class="form-check-input ml-0" id="exampleCheck1"> <label class="form-check-label ml-3" for="exampleCheck1">Tôi đồng ý với <u>điều khoản </u> và <u>chính sách của web</u></label>
 				</form> 
-				<a href = "test1.html">
+				<a href = "home.html">
 					<button type="button" class="btn btn-success mt-5">Đăng nhập</button>
 				</a>
 				<p class="exist mt-4">Chưa có tài khoản ? <span>Đăng kí</span></p>
