--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="test1.css">
-  <link rel="stylesheet" href="menubar.css">
-  <link rel="stylesheet" href="advertisement.css">
+  <link rel="stylesheet" href="css/test1.css">
+  <link rel="stylesheet" href="css/menubar.css">
+  <link rel="stylesheet" href="css/advertisement.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
