--- a/setting.html
+++ b/setting.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Cài đặt tài khoản </title>
-    <link rel="stylesheet" href="setting.css">
+    <link rel="stylesheet" href="css/setting.css">
 </head>
 <body> 
     <div class="logo">
