--- a/home.html
+++ b/home.html
@@ -85,9 +85,12 @@
 </button>
 <div class="dropdown-menu dropdown-menu-right">
 <button class="dropdown-item" type="button">Thông tin <img src="./Image/1200px-Infobox_info_icon.svg.png" alt="out" style="height:30px; weight:30px;"></button>
+<a href="setting.html">
 <button class="dropdown-item" type="button">Cài đặt <img src="./Image/480px-Windows_Settings_app_icon.png" alt="out" style="height:30px; weight:30px;"></button>
+</a>
+<a href="signin.html">
 <button class="dropdown-item" type="button">Đăng xuất <img src="./Image/leave+logout+signout+icon-1320183183841309817.png" alt="out" style="height:20px; weight:20px;"> </button>
-
+</a>
 </div>
 </div>
 <!--==================================================================================================================================-->
