--- a/setting.html
+++ b/setting.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Cài đặt tài khoản </title>
-    <link rel="stylesheet" href="css/setting.css">
+    <link rel="stylesheet" href="setting.css">
 </head>
 <body> 
     <div class="logo">
         <img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
     </div>
+    
     <div class="wrapper bg-white mt-sm-5">
     <h4 class="pb-4 border-bottom">Cài đặt tài khoản</h4>
     <div class="d-flex align-items-start py-3 border-bottom"> <img src="./Image/Ảnh 1.jpg" class="img" alt="">
@@ -38,7 +39,11 @@
                     </select> </div>
             </div>
         </div>
-        <div class="py-3 pb-4 border-bottom"> <button class="btn btn-primary mr-3">Lưu thay đổi</button> <button class="btn border button">Hủy</button> </div>
+        <div class="py-3 pb-4 border-bottom"> 
+            <a href="home.html">
+            <button class="btn btn-primary mr-3">Lưu thay đổi</button> 
+            </a>
+            <button class="btn border button">Hủy</button> </div>
         <div class="d-sm-flex align-items-center pt-3" id="deactivate">
             <div> <b>Khóa tài khoản của bạn</b>
                 <p>Thông tin chi tiết về tài khoản và mật khẩu của bạn</p>
