--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Đăng nhập</title>
+	<title>Đăng ký</title>
 	<link rel = "stylesheet" href="signin.css">
 </head>
 <body>
@@ -23,19 +23,22 @@
 			</div>
 			<div class="col-md-6 rcol">
 				<form class="sign-up">
-					<h2 class="heading mb-4">Đăng nhập</h2>
+					<h2 class="heading mb-4">Đăng ký</h2>
 					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng nhập"> </div>
+					<div class="form-group fone mt-2"> <i class="fas fa-envelope"></i> <input type="email" class="form-control" placeholder="Email"> </div>
 					<div class="form-group fone mt-2"> <i class="fas fa-lock"></i> <input type="password" class="form-control" placeholder="Mật khẩu">
 						<div class="image"><i class="fas fa-eye"></i></div>
+                    <div class="form-group fone mt-2"> <i class="fas fa-lock"></i> <input type="password" class="form-control" placeholder="Nhập lại mật khẩu"></div>
+                </div> <input type="checkbox" class="form-check-input ml-0" id="exampleCheck1"> <label class="form-check-label ml-3" for="exampleCheck1">Tôi đồng ý với <u>điều khoản </u> và <u>chính sách của web</u></label>
 				</form> 
-				<a href = "home.html">
-					<button type="button" class="btn btn-success mt-5">Đăng nhập</button>
+				<a href = "signin.html">
+					<button type="button" class="btn btn-success mt-5">Đăng ký</button>
 				</a>
-				<p class="exist mt-4">Chưa có tài khoản ? 
-				<a href="signup.html">
-				<span>Đăng kí</span>
-				</a>
-				</p>
+				<p class="exist mt-4">Trở lại 
+                <a href="signin.html">
+                    <span>Đăng nhập</span>
+                </a>
+                </p>
 			</div>
 		</div>
 	</div>
