--- a/setting.html
+++ b/setting.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <div class="logo">
-        <img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
+        <img src="./Image/image (9).png">
     </div>
     
     <div class="wrapper bg-white mt-sm-5">
