--- a/signin.html
+++ b/signin.html
@@ -12,9 +12,9 @@
 		<div class="row my-5">
 			<div class="col-md-6 text-left text-white lcol">
 				<div class="greeting">
-					<img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
+					<img src="./Image/image (9).png">
 					<h3>Welcome to <span class="txt">G-Life</span></h3>
-					<h6 class="mt-3">Let's make a good life</h6>
+					<h6 class="mt-3"><i>Let's make a good life</i></h6>
 				</div>
 				<div class="footer">
 					<div class="socials d-flex flex-row justify-content-between text-white">
@@ -33,7 +33,7 @@
 				</a>
 				<p class="exist mt-4">Chưa có tài khoản ? 
 				<a href="signup.html">
-				<span>Đăng kí</span>
+				<span>Đăng ký</span>
 				</a>
 				</p>
 			</div>
