--- a/signup.html
+++ b/signup.html
@@ -8,23 +8,23 @@
 	<link rel = "stylesheet" href="signin.css">
 </head>
 <body>
-	<div class="container d-flex justify-content-center">
+	<div class="container d-flex justify-content-center ">
 		<div class="row my-5">
-			<div class="col-md-6 text-left text-white lcol">
+			<div class="col-md-6 text-left text-white lcol ">
 				<div class="greeting">
-					<img src="./Image/240742353_573366430485462_1305311966770373851_n.png">
+					<img src="./Image/image (9).png">
 					<h3>Welcome to <span class="txt">G-Life</span></h3>
-					<h6 class="mt-3">Let's make a good life</h6>
+					<h6 class="mt-3"><i>Let's make a good life</i></h6>
 				</div>
 				<div class="footer">
 					<div class="socials d-flex flex-row justify-content-between text-white">
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 rcol">
+			<div class="col-md-6 rcol ">
 				<form class="sign-up">
 					<h2 class="heading mb-4">Đăng ký</h2>
-					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng nhập"> </div>
+					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng ký"> </div>
 					<div class="form-group fone mt-2"> <i class="fas fa-envelope"></i> <input type="email" class="form-control" placeholder="Email"> </div>
 					<div class="form-group fone mt-2"> <i class="fas fa-lock"></i> <input type="password" class="form-control" placeholder="Mật khẩu">
 						<div class="image"><i class="fas fa-eye"></i></div>
