--- a/signin.html
+++ b/signin.html
@@ -8,7 +8,7 @@
 	<link rel = "stylesheet" href="signin.css">
 </head>
 <body>
-	<div class="container d-flex justify-content-center">
+	<div class="container d-flex justify-content-center ">
 		<div class="row my-5">
 			<div class="col-md-6 text-left text-white lcol">
 				<div class="greeting">
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 rcol">
+			<div class="col-md-6 rcol rounded-lg">
 				<form class="sign-up">
 					<h2 class="heading mb-4">Đăng nhập</h2>
 					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng nhập"> </div>
