--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container d-flex justify-content-center ">
 		<div class="row my-5">
-			<div class="col-md-6 text-left text-white lcol">
+			<div class="col-md-6 text-left text-white lcol rounded-lg">
 				<div class="greeting">
 					<img src="./Image/image (9).png">
 					<h3>Welcome to <span class="txt">G-Life</span></h3>
