--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container d-flex justify-content-center ">
 		<div class="row my-5">
-			<div class="col-md-6 text-left text-white lcol ">
+			<div class="col-md-6 text-left text-white lcol rounded-lg ">
 				<div class="greeting">
 					<img src="./Image/image (9).png">
 					<h3>Welcome to <span class="txt">G-Life</span></h3>
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 rcol ">
+			<div class="col-md-6 rcol rounded-lg ">
 				<form class="sign-up">
 					<h2 class="heading mb-4">Đăng ký</h2>
 					<div class="form-group fone mt-2"> <i class="fas fa-user"></i> <input type="name" class="form-control" placeholder="Tên đăng ký"> </div>
