--- a/home.html
+++ b/home.html
@@ -548,7 +548,7 @@
                         <div class="flip-card1" tabIndex="0">
                     <div class="flip-card1-inner"   style="position:absolute;left:12%;">
                       <div class="flip-card1-front">
-                          <img src="C:\Users\ASUS\Desktop\Double_A\Image\image-removebg-preview (18).png" alt="bạc" style="width:310px;height:310px;">
+                          <img src="./Image/image-removebg-preview (18).png" alt="bạc" style="width:310px;height:310px;">
                       </div>
                       <div class="flip-card1-back rounded-lg">
                         <h3>15k /2 ngày</h3>
@@ -563,7 +563,7 @@
                       <div class="flip-card1 " tabIndex="0">
                         <div class="flip-card1-inner"style="position:absolute;left:12%;">
                           <div class="flip-card1-front">
-                           <img src="C:\Users\ASUS\Desktop\Double_A\Image\image-removebg-preview (19).png" alt="bạc" style="width:350px;height:350px;">
+                           <img src="./Image/image-removebg-preview (19).png" alt="bạc" style="width:350px;height:350px;">
                           </div>
                           <div class="flip-card1-back rounded-lg">
                               <h3>50k /5 ngày</h3>
@@ -577,7 +577,7 @@
                     <div class="flip-card1" tabIndex="0">
                       <div class="flip-card1-inner "style="position:absolute;left:12%;">
                         <div class="flip-card1-front">
-                            <img src="C:\Users\ASUS\Desktop\Double_A\Image\Gold.png" alt="bạc" style="width:310px;height:310px;">
+                            <img src="./Image/Gold.png" alt="bạc" style="width:310px;height:310px;">
                         </div>
                         <div class="flip-card1-back">
                             <h3>90k /10 ngày</h3>
@@ -590,7 +590,7 @@
                       <div class="flip-card1" tabIndex="0">
                         <div class="flip-card1-inner"style="position:absolute;left:12%;">
                           <div class="flip-card1-front">
-                              <img src="C:\Users\ASUS\Desktop\Double_A\Image\image-removebg-preview (20).png" alt="bạc" style="width:310px;height:310px;">
+                              <img src="./Image/image-removebg-preview (20).png" alt="bạc" style="width:310px;height:310px;">
                           </div>
                           <div class="flip-card1-back">
                               <h3>180k /20 ngày</h3>
