--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Thông tin</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css">
@@ -20,33 +20,33 @@
                                 <div class="row m-l-0 m-r-0">
                                     <div class="col-sm-4 bg-c-lite-green user-profile">
                                         <div class="card-block text-center text-white">
-                                            <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
-                                            <h6 class="f-w-600">Hembo Tingor</h6>
+                                            <div class="m-b-25"> <img src="./Image/avatar-icon-images-4.jpg" style="width:100px;height:100px;" class="img-radius" alt="User-Profile-Image"> </div>
+                                            <h4 class="f-w-600">Yuuki</h4>
                                             <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                         </div>
                                     </div>
                                     <div class="col-sm-8">
                                         <div class="card-block">
-                                            <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                            <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Thông tin</h6>
                                             <div class="row">
                                                 <div class="col-sm-6">
                                                     <p class="m-b-10 f-w-600">Email</p>
-                                                    <h6 class="text-muted f-w-400">rntng@gmail.com</h6>
+                                                    <h6 class="text-muted f-w-400">yuuki2209@gmail.com</h6>
                                                 </div>
                                                 <div class="col-sm-6">
-                                                    <p class="m-b-10 f-w-600">Phone</p>
+                                                    <p class="m-b-10 f-w-600">Số điện thoại</p>
                                                     <h6 class="text-muted f-w-400">98979989898</h6>
                                                 </div>
                                             </div>
-                                            <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
+                                            <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Lịch sử</h6>
                                             <div class="row">
                                                 <div class="col-sm-6">
-                                                    <p class="m-b-10 f-w-600">Recent</p>
-                                                    <h6 class="text-muted f-w-400">Sam Disuja</h6>
+                                                    <p class="m-b-10 f-w-600">Thuê</p>
+                                                    <h6 class="text-muted f-w-400">Ô tô Suawei sf5</h6>
                                                 </div>
                                                 <div class="col-sm-6">
-                                                    <p class="m-b-10 f-w-600">Most Viewed</p>
-                                                    <h6 class="text-muted f-w-400">Dinoter husainm</h6>
+                                                    <p class="m-b-10 f-w-600">Cho Thuê</p>
+                                                    <h6 class="text-muted f-w-400">Áo đồng phục</h6>
                                                 </div>
                                             </div>
                                             <ul class="social-link list-unstyled m-t-40 m-b-10">
@@ -61,5 +61,6 @@
                         </div>
                     </div>
                 </div>
+                
 </body>
 </html>
